[package]
name = "zombie_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={version = "0.11", features = ["json"]}
tokio = { version="1", features = ["full"] }
tarpc = {version="0.30", features=["tokio1"]}
anyhow = "1.0"
futures = "0.3"
serde_json = "1.0"
